logs/salt-ssh.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/msgpack'...
Listing './lib/python3.5/site-packages/msgpack_python-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/salt'...
Listing './lib/python3.5/site-packages/salt/acl'...
Listing './lib/python3.5/site-packages/salt/auth'...
Listing './lib/python3.5/site-packages/salt/beacons'...
Listing './lib/python3.5/site-packages/salt/cache'...
Listing './lib/python3.5/site-packages/salt/cli'...
Listing './lib/python3.5/site-packages/salt/client'...
Listing './lib/python3.5/site-packages/salt/client/raet'...
Listing './lib/python3.5/site-packages/salt/client/ssh'...
Listing './lib/python3.5/site-packages/salt/client/ssh/wrapper'...
Listing './lib/python3.5/site-packages/salt/cloud'...
Listing './lib/python3.5/site-packages/salt/cloud/clouds'...
Listing './lib/python3.5/site-packages/salt/cloud/deploy'...
Listing './lib/python3.5/site-packages/salt/config'...
Listing './lib/python3.5/site-packages/salt/config/schemas'...
Listing './lib/python3.5/site-packages/salt/daemons'...
Listing './lib/python3.5/site-packages/salt/daemons/flo'...
Listing './lib/python3.5/site-packages/salt/daemons/test'...
Listing './lib/python3.5/site-packages/salt/daemons/test/plan'...
Listing './lib/python3.5/site-packages/salt/defaults'...
Listing './lib/python3.5/site-packages/salt/engines'...
Listing './lib/python3.5/site-packages/salt/executors'...
Listing './lib/python3.5/site-packages/salt/ext'...
Listing './lib/python3.5/site-packages/salt/fileserver'...
Listing './lib/python3.5/site-packages/salt/grains'...
Listing './lib/python3.5/site-packages/salt/log'...
Listing './lib/python3.5/site-packages/salt/log/handlers'...
Listing './lib/python3.5/site-packages/salt/modules'...
Listing './lib/python3.5/site-packages/salt/modules/inspectlib'...
Listing './lib/python3.5/site-packages/salt/netapi'...
Listing './lib/python3.5/site-packages/salt/netapi/rest_cherrypy'...
Listing './lib/python3.5/site-packages/salt/netapi/rest_cherrypy/tools'...
Listing './lib/python3.5/site-packages/salt/netapi/rest_tornado'...
Listing './lib/python3.5/site-packages/salt/output'...
Listing './lib/python3.5/site-packages/salt/pillar'...
Listing './lib/python3.5/site-packages/salt/proxy'...
Listing './lib/python3.5/site-packages/salt/queues'...
Listing './lib/python3.5/site-packages/salt/renderers'...
Listing './lib/python3.5/site-packages/salt/returners'...
Listing './lib/python3.5/site-packages/salt/roster'...
Listing './lib/python3.5/site-packages/salt/runners'...
Listing './lib/python3.5/site-packages/salt/sdb'...
Listing './lib/python3.5/site-packages/salt/search'...
Listing './lib/python3.5/site-packages/salt/serializers'...
Listing './lib/python3.5/site-packages/salt/spm'...
Listing './lib/python3.5/site-packages/salt/spm/pkgdb'...
Listing './lib/python3.5/site-packages/salt/spm/pkgfiles'...
Listing './lib/python3.5/site-packages/salt/states'...
Listing './lib/python3.5/site-packages/salt/templates'...
Listing './lib/python3.5/site-packages/salt/templates/debian_ip'...
Listing './lib/python3.5/site-packages/salt/templates/git'...
Listing './lib/python3.5/site-packages/salt/templates/lxc'...
Listing './lib/python3.5/site-packages/salt/templates/rh_ip'...
Listing './lib/python3.5/site-packages/salt/templates/virt'...
Listing './lib/python3.5/site-packages/salt/thorium'...
Listing './lib/python3.5/site-packages/salt/tops'...
Listing './lib/python3.5/site-packages/salt/transport'...
Listing './lib/python3.5/site-packages/salt/transport/mixins'...
Listing './lib/python3.5/site-packages/salt/utils'...
Listing './lib/python3.5/site-packages/salt/utils/decorators'...
Listing './lib/python3.5/site-packages/salt/utils/docker'...
Listing './lib/python3.5/site-packages/salt/utils/openstack'...
Listing './lib/python3.5/site-packages/salt/utils/openstack/pyrax'...
Listing './lib/python3.5/site-packages/salt/utils/pkg'...
Listing './lib/python3.5/site-packages/salt/utils/validate'...
Listing './lib/python3.5/site-packages/salt/wheel'...
Listing './lib/python3.5/site-packages/salt_ssh-2017.7.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/man/man7'...
Listing './share/python-wheels'...
